--- a/_posts/2025-06-16-gen-ai-llm-2.md
+++ b/_posts/2025-06-16-gen-ai-llm-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: GenAI with LLMs (2) Pre-training & Scaling laws 
+title: GenAI with LLMs (2) Pre-training 
 date: 2025-06-16
 description: Course summary of Generative AI with Large Language Models. Part Two.
 tags: llm
