Update posts thumbnail images

--- a/_posts/2025-05-30-gen-ai-llm-1.md
+++ b/_posts/2025-05-30-gen-ai-llm-1.md
@@ -4,7 +4,7 @@ title: GenAI with LLMs (1) Fundamentals
 date: 2025-05-30
 description: Course summary of Generative AI with Large Language Models. Part One.
 tags: llm
-categories: course-summary
+#categories: course-summary
 giscus_comments: false
 related_posts: false
 thumbnail: assets/img/posts/genai_llm_1/1_transformer_variants.jpeg
