--- a/_posts/2025-06-16-gen-ai-llm-2.md
+++ b/_posts/2025-06-16-gen-ai-llm-2.md
@@ -4,7 +4,7 @@ title: GenAI with LLMs (2) Pre-training
 date: 2025-06-16
 description: Course summary of Generative AI with Large Language Models. Part Two.
 tags: llm
-categories: course-summary
+#categories: course-summary
 giscus_comments: false
 related_posts: false
 thumbnail: assets/img/posts/genai_llm_2/9_model_size.png
