--- a/_posts/2025-06-21-gen-ai-llm-3.md
+++ b/_posts/2025-06-21-gen-ai-llm-3.md
@@ -4,9 +4,10 @@ title: GenAI with LLMs (3) Instruction fine-tuning
 date: 2025-06-21
 description: Course summary of Generative AI with Large Language Models. Part Three.
 tags: llm
-categories: course-summary
+#categories: course-summary
 giscus_comments: false
 related_posts: false
+thumbnail: assets/img/posts/genai_llm_3/1_finetuning_highlevel.png
 toc:
   sidebar: left
 ---
