--- a/_posts/2025-06-28-gen-ai-llm-4.md
+++ b/_posts/2025-06-28-gen-ai-llm-4.md
@@ -4,9 +4,10 @@ title: GenAI with LLMs (4) Parameter-efficient fine-tuning
 date: 2025-06-28
 description: Course summary of Generative AI with Large Language Models. Part Four.
 tags: llm
-categories: course-summary
+#categories: course-summary
 giscus_comments: false
 related_posts: false
+thumbnail: assets/img/posts/genai_llm_4/4_PEFT_methods.png 
 toc:
   sidebar: left
 ---
