--- a/_posts/2025-08-06-gen-ai-llm-5.md
+++ b/_posts/2025-08-06-gen-ai-llm-5.md
@@ -4,9 +4,10 @@ title: GenAI with LLMs (5) Reinforcement learning from human feedback
 date: 2025-08-06
 description: Course summary of Generative AI with Large Language Models. Part Five.
 tags: llm
-categories: course-summary
+#categories: course-summary
 giscus_comments: false
 related_posts: false
+thumbnail: assets/img/posts/genai_llm_5/4_RL_finetuneLLM.png 
 toc:
   sidebar: left
 ---
