--- a/_posts/2025-06-16-gen-ai-llm-2.md
+++ b/_posts/2025-06-16-gen-ai-llm-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: GenAI with LLMs (2) Pre-training 
+title: GenAI with LLMs (2) Pre-training
 date: 2025-06-16
 description: Course summary of Generative AI with Large Language Models. Part Two.
 tags: llm
@@ -16,9 +16,10 @@ This post covers LLM pre-training and scaling laws from the **Generative AI With
 
 ## Model cards
 
-Model cards are useful for understanding how a model is trained, its use case, and known limitations. See [here](https://huggingface.co/docs/hub/en/model-cards) for a more complete definition from HuggingFace. 
+Model cards are useful for understanding how a model is trained, its use case, and known limitations. See [here](https://huggingface.co/docs/hub/en/model-cards) for a more complete definition from HuggingFace.
 
-Figures 1-2 are two example model cards from [Mitchel et al. (2018)](https://arxiv.org/abs/1810.03993). Figure 3 is the model card for T5 Large, captured from the lecture slides. 
+Figures 1-2 are two example model cards from [Mitchel et al. (2018)](https://arxiv.org/abs/1810.03993). Figure 3 is the model card for T5 Large, captured from the lecture slides.
+
 <div class="row mt-3">
      <div class="col-sm mt-3 mt-md-0">
          {% include figure.liquid loading="eager" path="assets/img/posts/genai_llm_2/1_modelcards_example.png" class="img-fluid rounded z-depth-1" %}
@@ -46,11 +47,11 @@ Figures 1-2 are two example model cards from [Mitchel et al. (2018)](https://arx
      <b>Figure 3.</b> Model card for T5. Source: course lecture.
 </div>
 
-## Token filtering 
+## Token filtering
 
-Only 1-3% of original tokens are used to train the LLM. We should consider this when we estimate how much data we need to collect if we decide to pre-train our own model. In other words, data quality control or bias removal is always needed to increase data quality before training. This refers to the <b>token filtering</b> or <b>rejection process</b> during LLM pre-training. 
+Only 1-3% of original tokens are used to train the LLM. We should consider this when we estimate how much data we need to collect if we decide to pre-train our own model. In other words, data quality control or bias removal is always needed to increase data quality before training. This refers to the <b>token filtering</b> or <b>rejection process</b> during LLM pre-training.
 
-LLM developers all start from massive web-scale corpora, then spend huge effort on <b>filtering</b>, <b>deduplicating</b>, <b>scoring for quality</b>, and <b>weighting data by domain or value</b>. See [GPT-4 Technical Report](https://arxiv.org/abs/2303.08774), [LLaMA](https://arxiv.org/abs/2302.13971), and [Chinchilla](https://arxiv.org/abs/2203.15556) for details. 
+LLM developers all start from massive web-scale corpora, then spend huge effort on <b>filtering</b>, <b>deduplicating</b>, <b>scoring for quality</b>, and <b>weighting data by domain or value</b>. See [GPT-4 Technical Report](https://arxiv.org/abs/2303.08774), [LLaMA](https://arxiv.org/abs/2302.13971), and [Chinchilla](https://arxiv.org/abs/2203.15556) for details.
 
 <div class="row mt-3">
      <div class="col-sm mt-3 mt-md-0">
@@ -74,11 +75,11 @@ Different LLMs pretrain using different objectives - from denoising (such as BER
      <b>Figure 5.</b> Model architectures and pre-training objectives. Source: course lecture.
 </div>
 
-### Autoencoding models  
+### Autoencoding models
 
-Autoencoding models like BERT are pre-trained using <b>masked language modeling</b>. In the context of autoencoding models, the pre-training task is often described as a <b>"denoising" objective</b> because the model learns to reconstruct the original text from a corrupted (noisy) version of it. 
+Autoencoding models like BERT are pre-trained using <b>masked language modeling</b>. In the context of autoencoding models, the pre-training task is often described as a <b>"denoising" objective</b> because the model learns to reconstruct the original text from a corrupted (noisy) version of it.
 
-This setup provides the model with <b>bi-directional context</b>, meaning it can consider both preceding and following words when predicting masked tokens. 
+This setup provides the model with <b>bi-directional context</b>, meaning it can consider both preceding and following words when predicting masked tokens.
 
 <div class="row mt-3">
      <div class="col-sm mt-3 mt-md-0">
@@ -89,11 +90,11 @@ This setup provides the model with <b>bi-directional context</b>, meaning it can
      <b>Figure 6.</b> Autoencoding models pre-training. Source: course lecture.
 </div>
 
-### Autoregressive models 
+### Autoregressive models
 
-Autoregressive models are pretrained using <b>causal language modeling</b>, where the model learns to predict the next token based solely on the preceding sequence of tokens. Note: predicting the next token is sometimes called <b>full language modeling</b> by researchers. 
+Autoregressive models are pretrained using <b>causal language modeling</b>, where the model learns to predict the next token based solely on the preceding sequence of tokens. Note: predicting the next token is sometimes called <b>full language modeling</b> by researchers.
 
-This setup provides <b>unidirectional context</b>, meaning the model has no access to future tokens during training. Autoregressive models mask the input sequence and can only see the input tokens leading up to the token in question. The model has no knowledge of the end of the sequence. The model then iterates over the input sequence one by one to predict the following token. 
+This setup provides <b>unidirectional context</b>, meaning the model has no access to future tokens during training. Autoregressive models mask the input sequence and can only see the input tokens leading up to the token in question. The model has no knowledge of the end of the sequence. The model then iterates over the input sequence one by one to predict the following token.
 
 Large decoder-only models, such as GPT, demonstrate strong ability in zero-shot and few-shot inferences, and can generalize well across a wide range of language tasks.
 
@@ -106,11 +107,12 @@ Large decoder-only models, such as GPT, demonstrate strong ability in zero-shot 
      <b>Figure 7.</b> Autoregressive models pre-training. Source: course lecture.
 </div>
 
-### Seq2Seq models 
+### Seq2Seq models
 
 Exact detail of pre-training varies from model to model.
+
 - A popular Seq2Seq model [T5](https://github.com/google-research/text-to-text-transfer-transformer) pretrains the encoder using <b>span corruption</b>, which masks random sequences of input tokens. Those masked sequences are then replaced with a unique sentinel token. <b>Sentinel tokens</b> are special tokens added to the vocabulary, but do not correspond to any actual word from the input text. The decoder is then tasked with reconstructing the masked token sequences auto-regressively. The output is the sentinel token followed by the predicted tokens.
-- BART combines the ideas of masked language modeling and causal language modeling within a seq2seq (encoder-decoder) framework. It corrupts text with various noise functions (e.g., setence shuffling, token masking), then uses a decoder to reconstruct the original text.  
+- BART combines the ideas of masked language modeling and causal language modeling within a seq2seq (encoder-decoder) framework. It corrupts text with various noise functions (e.g., setence shuffling, token masking), then uses a decoder to reconstruct the original text.
 
 <div class="row mt-3">
      <div class="col-sm mt-3 mt-md-0">
@@ -124,9 +126,10 @@ Exact detail of pre-training varies from model to model.
 ## Model size
 
 The growth of model size is powerd by
+
 - introduction of transformer
 - access to massive datasets
-- more powerful compute resources 
+- more powerful compute resources
 
 <div class="row mt-3">
      <div class="col-sm mt-3 mt-md-0">
@@ -150,7 +153,8 @@ The growth of model size is powerd by
      <b>Figure 10.</b> CUDA out-of-memory error (<a href="https://www.oreilly.com/library/view/generative-ai-on/9781098159214/ch04.html" target="_blank">source</a>). 
 </div>
 
-Quote from *Generative AI on AWS: Building Context-Aware Multimodal Reasoning Applications ([source](https://www.oreilly.com/library/view/generative-ai-on/9781098159214/ch04.html))*:
+Quote from _Generative AI on AWS: Building Context-Aware Multimodal Reasoning Applications ([source](https://www.oreilly.com/library/view/generative-ai-on/9781098159214/ch04.html))_:
+
 > A single-model parameter, at full 32-bit precision, is represented by 4 bytes. Therefore, a 1-billion-parameter model requires 4GB of GPU RAM just to load the model into GPU RAM at full precision. If you want to also train the model, you need more GPU memory to store the states of the numerical optimizer, gradients, and activations, as well as any temporary variables used by your functions.
 
 <div class="row mt-3">
@@ -171,7 +175,8 @@ Quote from *Generative AI on AWS: Building Context-Aware Multimodal Reasoning Ap
      <b>Figure 12.</b> Additional GPU RAM needed to train 1B parameters. Source: course lecture
 </div>
 
-Quote from *Generative AI on AWS: Building Context-Aware Multimodal Reasoning Applications ([source](https://www.oreilly.com/library/view/generative-ai-on/9781098159214/ch04.html))*:
+Quote from _Generative AI on AWS: Building Context-Aware Multimodal Reasoning Applications ([source](https://www.oreilly.com/library/view/generative-ai-on/9781098159214/ch04.html))_:
+
 > When you experiment with training a model, it’s recommended that you start with batch_size=1 to find the memory boundaries of the model with just a single training example. You can then incrementally increase the batch size until you hit the CUDA out-of-memory error. This will determine the maximum batch size for the model and dataset. A larger batch size can often speed up your model training.
 
 > These additional components lead to approximately 12–20 extra bytes of GPU memory per model parameter. For example, to train a 1-billion-parameter model, you will need approximately 24 GB of GPU RAM at 32-bit full precision, six times the memory compared to just 4 GB of GPU RAM for loading the model
@@ -185,7 +190,7 @@ Quote from *Generative AI on AWS: Building Context-Aware Multimodal Reasoning Ap
      <b>Figure 13.</b> Comparison of approximate GPU RAM needed to load versus load and train a 1-billion-parameter model at 32-bit full precision (<a href="https://www.oreilly.com/library/view/generative-ai-on/9781098159214/ch04.html" target="_blank">source</a>).
 </div>
 
-One technique we can use to reduce memory is called <b>quantization</b>. The idea is to reduce the memory required to store the model weights by reducing their precision from 32-bit floating point numbers to 16-bit (or 8-bit) floating point numbers. Quantization statistically projects the original 32-bit floating point numbers into a lower precision space, using scaling factors calculated based on the range of the original 32-bit floating point numbers. 
+One technique we can use to reduce memory is called <b>quantization</b>. The idea is to reduce the memory required to store the model weights by reducing their precision from 32-bit floating point numbers to 16-bit (or 8-bit) floating point numbers. Quantization statistically projects the original 32-bit floating point numbers into a lower precision space, using scaling factors calculated based on the range of the original 32-bit floating point numbers.
 
 <div class="row mt-3">
      <div class="col-sm mt-3 mt-md-0">
@@ -205,12 +210,13 @@ One technique we can use to reduce memory is called <b>quantization</b>. The ide
      <b>Figure 15.</b> Quantization: BFLOAT16. Source: course lecture
 </div>
 
-<b>BFLOAT-16</b> (BF16, developed at Google Brain) has recently become a popular alternative to FP16. 
-- BF16 is a hybrid between half precision FP16 and full precision FP32. 
+<b>BFLOAT-16</b> (BF16, developed at Google Brain) has recently become a popular alternative to FP16.
+
+- BF16 is a hybrid between half precision FP16 and full precision FP32.
 - BF16 significantly helps with training stability and is supported by newer GPUs such as NVIDIA's A100.
 - BF16 is often described as truncated 32-bit float, as it captures the full dynamic range of the full 32-bit float that uses only 16-bits.
-- BF16 uses the full 8 bits to represent the exponent, but truncates the fraction to just 7 bits. 
-- Downside: BF16 is not well suited for integer calculations, but these are relatively rare in deep learning. 
+- BF16 uses the full 8 bits to represent the exponent, but truncates the fraction to just 7 bits.
+- Downside: BF16 is not well suited for integer calculations, but these are relatively rare in deep learning.
 
 <div class="row mt-3">
      <div class="col-sm mt-3 mt-md-0">
@@ -223,7 +229,7 @@ One technique we can use to reduce memory is called <b>quantization</b>. The ide
 
 ## Scalling law
 
-The <b>Chinchilla scaling law</b> shows that, for a fixed compute budget, language model performance is optimized by using more training data and a smaller model size ([Hoffmann et al., 2022](https://arxiv.org/abs/2203.15556)). Undertraining is the bottleneck - large models like GPT-3 were not trained on enough tokens to fully benefit from their size. 
+The <b>Chinchilla scaling law</b> shows that, for a fixed compute budget, language model performance is optimized by using more training data and a smaller model size ([Hoffmann et al., 2022](https://arxiv.org/abs/2203.15556)). Undertraining is the bottleneck - large models like GPT-3 were not trained on enough tokens to fully benefit from their size.
 
 <div class="row mt-3">
      <div class="col-sm mt-3 mt-md-0">
@@ -259,23 +265,22 @@ Example: [BloombergGPT](https://arxiv.org/abs/2303.17564)
 ## References
 
 - [Generative AI on AWS: Building Context-Aware, Multimodal Reasoning Applications](https://www.amazon.com/Generative-AI-AWS-Multimodal-Applications/dp/1098159225/)
-    - Deep dive into all phases of the generative AI Lifecycle
-- [BLOOM: BigScience 176B Model](https://arxiv.org/abs/2211.05100) 
-    - BLOOM is an open-source LLM with 176B parameters trained in an open and transparent way. In this paper, the authors present a detailed discussion of the dataset and process used to train the model. You can also see a high-level overview of the model [here](https://bigscience.notion.site/BLOOM-BigScience-176B-Model-ad073ca07cdf479398d5f95d88e218c4)
+  - Deep dive into all phases of the generative AI Lifecycle
+- [BLOOM: BigScience 176B Model](https://arxiv.org/abs/2211.05100)
+  - BLOOM is an open-source LLM with 176B parameters trained in an open and transparent way. In this paper, the authors present a detailed discussion of the dataset and process used to train the model. You can also see a high-level overview of the model [here](https://bigscience.notion.site/BLOOM-BigScience-176B-Model-ad073ca07cdf479398d5f95d88e218c4)
 - [Vector Space Models](https://www.coursera.org/learn/classification-vector-spaces-in-nlp/home/week/3)
-    - Series of lessons from DeepLearning.AI's Natural Language Processing specialization discussing the basics of vector space models and their use in language modeling.
+  - Series of lessons from DeepLearning.AI's Natural Language Processing specialization discussing the basics of vector space models and their use in language modeling.
 - [Scaling Laws for Neural Language Models](https://arxiv.org/abs/2001.08361)
-    - Pre-training and scaling laws
+  - Pre-training and scaling laws
 - [What Language Model Architecture and Pretraining Objective Work Best for Zero-Shot Generalization?](https://arxiv.org/pdf/2204.05832.pdf)
-Model architectures and pre-training objectives. The paper examines modeling choices in large pre-trained language models and identifies the optimal approach for zero-shot generalization.
-- [HuggingFace Tasks](https://huggingface.co/tasks) and [Model Hub](https://huggingface.co/models) 
-    - Collection of resources to tackle varying machine learning tasks using the HuggingFace library.
-- [LLaMA: Open and Efficient Foundation Language Models](https://arxiv.org/pdf/2302.13971.pdf) 
-    - Article from Meta AI proposing Efficient LLMs (their model with 13B parameters outperform GPT3 with 175B parameters on most benchmarks)
+  Model architectures and pre-training objectives. The paper examines modeling choices in large pre-trained language models and identifies the optimal approach for zero-shot generalization.
+- [HuggingFace Tasks](https://huggingface.co/tasks) and [Model Hub](https://huggingface.co/models)
+  - Collection of resources to tackle varying machine learning tasks using the HuggingFace library.
+- [LLaMA: Open and Efficient Foundation Language Models](https://arxiv.org/pdf/2302.13971.pdf)
+  - Article from Meta AI proposing Efficient LLMs (their model with 13B parameters outperform GPT3 with 175B parameters on most benchmarks)
 - [Language Models are Few-Shot Learners](https://arxiv.org/pdf/2005.14165.pdf)
-    - Scaling laws and compute-optimal models. This paper investigates the potential of few-shot learning in Large Language Models.
-- [Training Compute-Optimal Large Language Models](https://arxiv.org/pdf/2203.15556.pdf) 
-    - Study from DeepMind to evaluate the optimal model size and number of tokens for training LLMs. Also known as “Chinchilla Paper”.
-- [BloombergGPT: A Large Language Model for Finance](https://arxiv.org/pdf/2303.17564.pdf) 
-    - LLM trained specifically for the finance domain, a good example that tried to follow chinchilla laws.
-
+  - Scaling laws and compute-optimal models. This paper investigates the potential of few-shot learning in Large Language Models.
+- [Training Compute-Optimal Large Language Models](https://arxiv.org/pdf/2203.15556.pdf)
+  - Study from DeepMind to evaluate the optimal model size and number of tokens for training LLMs. Also known as “Chinchilla Paper”.
+- [BloombergGPT: A Large Language Model for Finance](https://arxiv.org/pdf/2303.17564.pdf)
+  - LLM trained specifically for the finance domain, a good example that tried to follow chinchilla laws.
